# gtm-proxy

./: .dockerignore  CHANGELOG.rst  Dockerfile  README.md  README_ZH.md  pyproject.toml  renovate.json  requirements.txt
.github/workflows/: release-docker.yaml  release.yaml
config/: config.toml.example  config.toml.template
config/release-templates/: .release_notes.md.j2
src/: config.toml.example  main.py
